--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>小程序用户信息</title>
-    <link href="../static/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../static/bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <link th:href="@{/static/bootstrap-3.3.7-dist/css/bootstrap.min.css}" rel="stylesheet">
+    <script th:src="@{/static/bootstrap-3.3.7-dist/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="panel panel-default">
@@ -15,9 +15,13 @@
     <table class="table table-bordered table-striped">
         <tr>
             <th>姓名</th>
+            <th>职位</th>
         </tr>
-        <tr th:each="user :${users}">
+        <!--/*@thymesVar id="users" type="java.util.List"*/-->
+        <!--/*@thymesVar id="user" type="com.main.tgcareer.modules.user.entity.User"*/-->
+        <tr th:each="user: ${users}">
             <td th:text="${user.name}">王非洲</td>
+            <td th:text="${user.job}">精算师</td>
         </tr>
     </table>
 </div>
