--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -61,7 +61,7 @@
 //                }
 //            }
 //        })
-        window.location.href="/tgcareer/excel";
+        window.location.href="/tgcareer/download";
 
     }
 </script>
