--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,7 +52,7 @@
                                        style="text-align: right;padding-top:7px">密码</label>
                                 <div class="col-md-9" >
                                     <input type="password" class="col-sm-9 form-control" id="txtUserPwd"
-                                           placeholder="请输入密码" th:field="*{userPsw}" />
+                                           placeholder="请输入密码" th:field="*{password}" />
                                 </div>
                             </div>
 
