--- a/src/main/resources/templates/salaryList.html
+++ b/src/main/resources/templates/salaryList.html
@@ -8,12 +8,37 @@
     <script th:src="@{/static/bootstrap-3.3.7-dist/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
+<div class="panel panel-default">
+
+<!-- Default panel contents -->
+<div class="panel-heading">小程序薪资信息</div>
+
+<!-- Table -->
+<table class="table table-bordered table-striped">
+    <tr>
+        <th>城市</th>
+        <th>职位</th>
+        <th>公司</th>
+        <th>联系方式</th>
+    </tr>
+    <!--/*@thymesVar id="salaries" type="java.util.List"*/-->
+    <!--/*@thymesVar id="salary" type="com.main.tgcareer.modules.salary.entity.Salary"*/-->
+    <tr th:each="salary: ${salaries}">
+        <td th:text="${salary.city}">北京</td>
+        <td th:text="${salary.job}">精算师</td>
+        <td th:text="${salary.corporation}">阿里巴巴</td>
+        <td th:text="${salary.contact}">12345678</td>
+    </tr>
+</table>
+</div>
+<div>
 <form enctype="multipart/form-data" id="excelUpload"  th:action="@{/upload}" method="post" class="form-horizontal">
     <button id="uploadEventBtn" type="button" >选择文件</button>
     <input type="file" name="file" id="uploadEventFile">
     <input id="uploadEventPath"  disabled="disabled"  type="text" placeholder="请选择excel表"  >
 </form>
 <button type="button"  onclick="project.uploadBtn()" >上传</button>
+</div>
 </body>
 <script type="text/javascript">
     var project;
