--- a/src/main/resources/templates/salaryList.html
+++ b/src/main/resources/templates/salaryList.html
@@ -64,8 +64,8 @@
             var uploadEventFile = $("#uploadEventFile").val();
             if(uploadEventFile === ''){
                 alert("请选择excel,再上传");
-            }else if(uploadEventFile.lastIndexOf(".xls")<0){//可判断以.xls和.xlsx结尾的excel
-                alert("只能上传Excel文件");
+            }else if(uploadEventFile.lastIndexOf(".xls")<0 && !(uploadEventFile.lastIndexOf(".xlsx")<0)){//可判断以.xls和.xlsx结尾的excel
+                alert("只能上传Excel.xls文件");
             }else{
                 var url = '/tgcareer/upload';
                 var formData = new FormData($('form')[0]);
