--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -27,14 +27,14 @@
     </table>
     <table border="0" style="margin-top:4px; margin-left: 18px">
         <tr>
-            <td><a href="#" class="easyui-linkbutton" onclick="downloadfile();">数据导出</a></td>
+            <td><a href="#" class="easyui-linkbutton" onclick="downloadFile();">数据导出</a></td>
 
         </tr>
     </table>
 </div>
 </body>
 <script>
-    function downloadfile(){
+    function downloadFile(){
 //        var params =
 //            [
 //                {
