--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <script th:src="@{/static/bootstrap-3.3.7-dist/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 
-<body style="background: url('img/loginBg.jpg') no-repeat;background-size:100%; position: absolute;" >
+<body style="background: url('img/loginBg.jpg') no-repeat;background-size: cover;background-size:100%; position: absolute;attachment: fixed;" >
 <form >
     <!-- common 的 定义好的 header模板 引用  参数 title  -->
     <!--
@@ -40,7 +40,7 @@
                                 </label>
                                 <div class="col-md-9" >
                                     <input type="text" class="col-md-9 form-control" id="txtUserName"
-                                           placeholder="请输入用户名"
+                                           placeholder="请输入用户名" th:field="*{userName}"
                                            required="required" />
                                 </div>
                             </div>
@@ -51,9 +51,8 @@
                                 <label for="txtUserPwd" class="col-sm-3 control-label"
                                        style="text-align: right;padding-top:7px">密码</label>
                                 <div class="col-md-9" >
-                                    <!--<input id="password" name="password" type="password" placeholder="密码" aria-describedby="basic-addon2" />-->
                                     <input type="password" class="col-sm-9 form-control" id="txtUserPwd"
-                                           placeholder="请输入密码" />
+                                           placeholder="请输入密码" th:field="*{password}" />
                                 </div>
                             </div>
 
