--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,76 +5,75 @@
     <title>登录</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link type="text/css" th:href="@{/static/bootstrap-3.3.7-dist/css/login.css}" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../static/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
     <script src="../static/bootstrap-3.3.7-dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script th:src="@{/static/jquery-3.3.1/jquery-3.3.1.min.js}" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/static/bootstrap-3.3.7-dist/css/bootstrap.min.css}" />
+
     <script th:src="@{/static/bootstrap-3.3.7-dist/js/bootstrap.min.js}" type="text/javascript"></script>
 
-    <style type="text/css">
-        body{
-            background:url("img/loginBg.jpg") no-repeat;
-            background-size: 100%;
-        }
-    </style>
 </head>
 
 <body >
-    <form th:action="@{/login}" method="post">
-        <div class="container"  style=" margin-top: 150px;"></div>
-        <div class="container" style="margin-left: 600px;"  >
-            <div class="row" style="margin-left: auto;">
-                <div class="col-md-4 col-md-offset-4" >
-                    <div class="panel panel-default" style="background: rgba(216,216,216,0.5);">
-                        <div class="panel-heading" style="background: rgba(216,216,216,0.5);">
-                            <h3 class="panel-title" style="font-weight: bold">后台管理登录</h3>
-                        </div>
-
-                        <div class="panel-body" style="background: rgba(216,216,216,0.5);">
-                            <div>
-                                <!--/*@thymesVar id="error" type=""*/-->
-                                <span id="basic-addon0">&nbsp;</span>
-                                <span style="font-size: 12px;color: red" th:text="${error}" aria-describedby="basic-addon0"></span>
-
+    <div>
+        <form th:action="@{/login}" method="post">
+            <div class="container"  style=" margin-top: 150px;"></div>
+            <div class="container" style="margin-left: 600px;"  >
+                <div class="row" style="margin-left: auto;">
+                    <div class="col-md-4 col-md-offset-4" >
+                        <div class="panel panel-default" style="background: rgba(216,216,216,0.5);">
+                            <div class="panel-heading" style="background: rgba(216,216,216,0.5);">
+                                <h3 class="panel-title" style="font-weight: bold">后台管理登录</h3>
                             </div>
 
-                            <div class="form-group form-inline"  style="padding-top:5px;">
+                            <div class="panel-body" style="background: rgba(216,216,216,0.5);">
+                                <div>
+                                    <!--/*@thymesVar id="error" type=""*/-->
+                                    <span id="basic-addon0">&nbsp;</span>
+                                    <span style="font-size: 12px;color: red" th:text="${error}" aria-describedby="basic-addon0"></span>
+
+                                </div>
+
+                                <div class="form-group form-inline"  style="padding-top:5px;">
                                 <span id="basic-addon1" class="col-md-3 control-label"  style="text-align: right; padding-top:7px;">
                                     用户名
                                 </span>
-                                <div class="col-md-9" >
-                                    <input id="user_name" name="name" type="text" class="col-md-9 form-control" placeholder="输入用户名" aria-describedby="basic-addon1" />
-                                </div>
-                            </div>
-
-                            <div class="form-group form-inline" style="padding-top:45px;">
-                                <span id="basic-addon2" class="col-sm-3 control-label"
-                                      style="text-align: right;padding-top:7px">密码</span>
-                                <div class="col-md-9" >
-                                    <input id="password" name="password" type="password" class="col-md-9 form-control" placeholder="输入密码" aria-describedby="basic-addon2" />
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-offset-3 col-md-9" >
-                                    <div class="checkbox">
-                                        <label> <input type="checkbox" />请记住我</label>
+                                    <div class="col-md-9" >
+                                        <input id="user_name" name="name" type="text" class="col-md-9 form-control" placeholder="输入用户名" aria-describedby="basic-addon1" />
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="form-group">
+                                <div class="form-group form-inline" style="padding-top:45px;">
+                                <span id="basic-addon2" class="col-sm-3 control-label"
+                                      style="text-align: right;padding-top:7px">密码</span>
+                                    <div class="col-md-9" >
+                                        <input id="password" name="password" type="password" class="col-md-9 form-control" placeholder="输入密码" aria-describedby="basic-addon2" />
+                                    </div>
+                                </div>
 
-                                <div class="col-md-offset-3 col-md-5" style="width: 80%; margin-top: 5px;margin-left:30px; margin-right:20px;float:left;" >
-                                    <button class="btn btn-primary btn-block" type="submit" style="width:240px;" value="login" name="action">登 录</button>
+                                <div class="form-group">
+                                    <div class="col-md-offset-3 col-md-9" >
+                                        <div class="checkbox">
+                                            <label> <input type="checkbox" />请记住我</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+
+                                    <div class="col-md-offset-3 col-md-5" style="width: 80%; margin-top: 5px;margin-left:30px; margin-right:20px;float:left;" >
+                                        <button class="btn btn-primary btn-block" type="submit" style="width:240px;" value="login" name="action">登 录</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-    </form>
+        </form>
+    </div>
+
 </body>
 </html>
