--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,24 +8,180 @@
     <script th:src="@{/static/bootstrap-3.3.7-dist/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
-<div>
+<!--顶部导航栏部分-->
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" title="logoTitle" href="#">logo</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li role="presentation">
+                    <!--/*@thymesVar id="userName" type="java.lang.String"*/-->
+                    <a href="#">当前用户：<span class="badge" th:text="${userName}">zzz</span></a>
+                </li>
+                <li>
+                    <a href="login.html">
+                        <span class="glyphicon glyphicon-lock"></span>退出登录</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-    </ul>
+<!-- 中间主体内容部分 -->
+<div class="pageContainer">
+    <!-- 左侧导航栏 -->
+    <div class="pageSidebar">
+        <ul class="nav nav-stacked nav-pills">
+            <li role="presentation">
+                <a href="salaryList.html" target="mainFrame" >薪资列表</a>
+            </li>
+            <li role="presentation">
+                <a href="userList.html" target="mainFrame">用户列表</a>
+            </li>
+            <li role="presentation">
+                <a href="salaryPost.html" target="mainFrame">薪资上传</a>
+            </li>
+            <li role="presentation">
+                <a href="userDownload.html" target="mainFrame">用户下载</a>
+            </li>
+            <!-- 开始 -->
+            <!--<li class="dropdown">-->
+                <!--<a class="dropdown-toggle" data-toggle="dropdown" href="nav4.html" target="mainFrame">-->
+                    <!--个人设置<span class="caret"></span>-->
+                <!--</a>-->
+                <!--<ul class="dropdown-menu">-->
+                    <!--<li>-->
+                        <!--<a href="nav1.html" target="mainFrame">修改密码</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="nav2.html" target="mainFrame">退出系统</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="nav3.html" target="mainFrame">查看个人信息</a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</li>-->
+            <!--&lt;!&ndash; 结束 &ndash;&gt;-->
+            <!--<li role="presentation">-->
+                <!--<a href="nav5.html" target="mainFrame">权限设置</a>-->
+            <!--</li>-->
 
-    <!-- Tab panes -->
-    <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="home">1</div>
-        <div role="tabpanel" class="tab-pane" id="profile">2</div>
-        <div role="tabpanel" class="tab-pane" id="messages">3</div>
-        <div role="tabpanel" class="tab-pane" id="settings">4</div>
+
+
+        </ul>
+    </div>
+
+    <!-- 左侧导航和正文内容的分隔线 -->
+    <div class="splitter"></div>
+    <!-- 正文内容部分 -->
+    <div class="pageContent">
+        <iframe src="salaryList.html" id="mainFrame" name="mainFrame"
+                frameborder="0" width="100%"  height="100%">
+        </iframe>
     </div>
 
 </div>
+<!-- 底部页脚部分 -->
+<!--<div class="footer">-->
+    <!--<p class="text-center">-->
+        <!--2019 &copy; 000.-->
+    <!--</p>-->
+<!--</div>-->
+
+<script type="text/javascript">
+    $(".nav li").click(function() {
+        $(".active").removeClass('active');
+        $(this).addClass("active");
+    });
+
+
+</script>
 </body>
+<style type="text/css">
+    .navbar-collapse{
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .nav>li{
+        text-align: center;
+    }
+    .nav>li>a{
+        color:#444;
+        margin: 0 5px;
+    }
+    .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
+        background-color: #222222;
+    }
+    .dropdown-menu{
+        float: none;
+        position: initial;
+        min-width: 200px;
+        margin-left: 0;
+        background-color: #E3E3E3;
+        box-shadow: none;
+        text-align: center;
+    }
+    .dropdown-menu>li>a{
+        padding: 10px 15px;
+    }
+
+    /* 主体样式 */
+    body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+        background-color: #FFFFFF;
+        font-family: "Microsoft YaHei", sans-serif;
+    }
+    .pageSidebar{
+        width: 240px;
+        height:100%;
+        padding-bottom: 30px;
+        overflow: auto;
+        background-color: #e3e3e3;
+    }
+    .splitter {
+        width: 5px;
+        height: 100%;
+        bottom: 0;
+        left: 240px;
+        position: absolute;
+        overflow: hidden;
+        background-color: #fff;
+    }
+    .pageContent{
+        height: 100%;
+        min-width: 768px;
+        left: 246px;
+        top: 0;
+        right: 0;
+        z-index: 3;
+        padding-bottom: 30px;
+        position: absolute;
+    }
+    .pageContainer{
+        bottom: 0;
+        left:0;
+        right: 0;
+        top: 53px;
+        overflow: auto;
+        position: absolute;
+        width: 100%;
+    }
+    .footer {
+        width: 100%;
+        height: 30px;
+        line-height: 30px;
+        margin-top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        z-index: 10;
+        background-color:#DFDFDF;
+    }
+</style>
 </html>
