--- a/src/main/resources/templates/salaryPost.html
+++ b/src/main/resources/templates/salaryPost.html
@@ -13,8 +13,8 @@
         <!--<button id="uploadEventBtn" type="button" >选择文件</button>-->
         <input class="file" type="file" name="file" id="uploadEventFile" placeholder="请选择excel.xls表">
         <!--<input id="uploadEventPath"  disabled="disabled"  type="text" placeholder="请选择excel.xls表"  >-->
+        <button type="button" class="btn btn-primary" onclick="project.uploadBtn()" >上传</button>
     </form>
-    <button type="button"  onclick="project.uploadBtn()" >上传</button>
 </div>
 <script type="text/javascript">
     var project;
